@@ -98,5 +98,34 @@ module.exports = {
                 return false;
             }
         };
+    },
+
+    formatLink: function (id, type) {
+        switch (type) {
+            case "yt":
+                return "http://youtu.be/" + id;
+            case "vi":
+                return "http://vimeo.com/" + id;
+            case "dm":
+                return "http://dailymotion.com/video/" + id;
+            case "sc":
+                return id;
+            case "li":
+                return "http://livestream.com/" + id;
+            case "tw":
+                return "http://twitch.tv/" + id;
+            case "jt":
+                return "http://justin.tv/" + id;
+            case "rt":
+                return id;
+            case "jw":
+                return id;
+            case "im":
+                return "http://imgur.com/a/" + id;
+            case "us":
+                return "http://ustream.tv/" + id;
+            default:
+                return "";
+        }
     }
 };
