@@ -1,3 +1,9 @@
+Sun Oct 06 01:42 2013 CDT
+    * lib/channel.js, www/assets/js/callbacks.js: Include the link that
+      failed with the queueFail packet.  Clicking the "+ n more" tag
+      shows all links that failed for stacked messages
+    * lib/utilities.js: Add a formatLink function
+
 Sat Oct 05 20:41 2013 CDT
     * lib/user.js: Fix a bug where duplicate guestnames were allowed with
       different capitalizations
